// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remove-serve-target migration should not remove serve targets when payload plugin is not installed: normal project 1`] = `
"{
  "name": "test-normal",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "apps/test-normal/src",
  "projectType": "application",
  "targets": {
    "build": {
      "executor": "@nx/js:tsc",
      "options": {}
    },
    "serve": {
      "executor": "@nx/js:node",
      "options": {}
    }
  }
}
"
`;

exports[`remove-serve-target migration should not remove serve targets when payload plugin is not installed: payload project 1`] = `
"{
  "name": "test-payload",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "apps/test-payload/src",
  "projectType": "application",
  "targets": {
    "build": {
      "executor": "@nx/js:tsc",
      "options": {}
    },
    "serve": {
      "executor": "@nx/js:node",
      "options": {}
    }
  }
}
"
`;

exports[`remove-serve-target migration should remove serve target from payload projects: normal project 1`] = `
"{
  "name": "test-normal",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "apps/test-normal/src",
  "projectType": "application",
  "targets": {
    "build": {
      "executor": "@nx/js:tsc",
      "options": {}
    },
    "serve": {
      "executor": "@nx/js:node",
      "options": {}
    }
  }
}
"
`;

exports[`remove-serve-target migration should remove serve target from payload projects: payload project 1`] = `
"{
  "name": "test-payload",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "apps/test-payload/src",
  "projectType": "application",
  "targets": {
    "build": {
      "executor": "@nx/js:tsc",
      "options": {}
    }
  }
}
"
`;
